--- a/style.css
+++ b/style.css
@@ -166,13 +166,18 @@ body {
 
 .note-editor-modal {
   width: 600px;
-  min-height: 100px;
+  min-height: 300px;
   background: rgb(255, 255, 255);
   border-radius: 5px;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
     rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
   padding: 10px;
   margin: 5px;
+
+  max-height: 500px;
+  overflow-y: auto;
+  scrollbar-color: var(--main-color) rgb(179, 179, 179);
+  scrollbar-width: thin;
 }
 .note-title-editor {
   color: gray;
